<resources>
    <string name="app_name">Учим английский с умом</string>
    <string name="search">Поиск</string>
    <string name="selection">Список слов</string>
    <string name="cards1">Изучение</string>
    <string name="cards2">Повторение</string>
    <string name="cards3">Общее повторение</string>
    <string name="settings">Настройки</string>
    <string name="cancel">Отмена</string>
    <string name="stop_or_resume">Остановиться или продолжить</string>
    <string name="falling_words">Поймай слова</string>
    <string name="level">Уровень %d</string>
    <string name="to_next_level">очков до следующего уровня %d</string>
    <string name="vocabulary">Словарный запас: %s</string>
    <string name="learned">Выучено слов: %d</string>
    <string name="on_learning">Слов на изучении: %d</string>
    <string name="to_game">Уточнить словарный запас</string>
    <string name="learn_new">Изучить новые слова</string>
    <string name="small_repetition">Повторить сегодняшние</string>
    <string name="big_repetition">Общее повторение (%s)</string>
    <string name="big_repetition_count">Общее повторение</string>
    <string name="choosing">Оставьте только незнакомые слова</string>
    <string name="add_word">Добавить своё слово</string>
    <string name="write_word">Впишите слово</string>
    <string name="eng_word">Английское слово</string>
    <string name="rus_word">Перевод</string>
    <string name="accept">Принять</string>
    <string name="decline">Отмена</string>
    <string name="known">Помню</string>
    <string name="unknown">Не помню</string>
    <string name="number_of_words">Слов на изучение</string>
    <string name="number_of_words_old">Слов на изучение было</string>
    <string name="click_unknown">Перехватите неизвестные слова</string>
    <string name="unknown_full">Перехватите неизвестные слова. Не дайте им достичь конца экрана.</string>
    <string name="game_title0">Поймай слова</string>
    <string name="game_title1">Отбор новых слов</string>
    <string name="days_missed">Дней пропущено</string>
    <string name="day_start">Начало дня</string>
    <string name="current_position">Текущая позиция</string>
    <string name="last_rank">Число строк</string>
    <string name="last_day_start">Начало последнего дня</string>
    <string name="success">Задание выполнено!</string>
    <string name="reward">+%dXP</string>
    <string name="congratulations">Поздравляем,</string>
    <string name="gainNewLevel">Вы достигли нового уровня!</string>
    <string name="ok">OK</string>
    <string name="title1">Новые слова</string>
    <string name="text1">Пора выучить порцию новых слов</string>
    <string name="title2">Повторение</string>
    <string name="text2">Пора повторить сегодняшние слова</string>
    <string name="title3">Общее повторение</string>
    <string name="text3">Время для общего повторения</string>
    <string name="choose_level">Выберите свой уровень</string>
    <string name="beginner">Beginner</string>
    <string name="elementary">Elementary</string>
    <string name="pre_intermediate">Pre-Intermediate</string>
    <string name="intermediate">Intermediate</string>
    <string name="upper_intermediate">Upper-Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="proficient">Proficient</string>
    <string name="audio">Авто-озвучивание</string>
    <string name="random">Случайный порядок</string>
    <string name="en_ru">Начинать с английского</string>
    <string name="speed">Скорость</string>
    <string name="added_words">Добавленные слова</string>
    <string name="game_finished">Поздравляем,\n вы выучили все слова!</string>
    <string name="downloading">Загрузка базы данных, ждите... %d%%</string>

    <string-array name="multipliers">
        <item>×1.2</item>
        <item>×1.0</item>
        <item>×0.8</item>
        <item>×0.6</item>
    </string-array>
</resources>
