<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.first.learnenglishwordssmart.fragments.VocabularyFragment"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/clickableContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:foreground="@color/transparentBlack">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/choose"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/choose_level"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/beginner"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button"
            android:onClick="setVocabulary"
            android:text="@string/beginner"
            android:textSize="16sp" />


        <Button
            android:id="@+id/elementary"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button"
            android:onClick="setVocabulary"
            android:text="@string/elementary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/pre_intermediate"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button"
            android:onClick="setVocabulary"
            android:text="@string/pre_intermediate"
            android:textSize="16sp" />

        <Button
            android:id="@+id/intermediate"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button"
            android:onClick="setVocabulary"
            android:text="@string/intermediate"
            android:textSize="16sp" />

        <Button
            android:id="@+id/upper_intermediate"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button"
            android:onClick="setVocabulary"
            android:text="@string/upper_intermediate"
            android:textSize="16sp" />

        <Button
            android:id="@+id/advanced"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button"
            android:onClick="setVocabulary"
            android:text="@string/advanced"
            android:textSize="16sp" />


        <Button
            android:id="@+id/proficient"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:background="@drawable/button"
            android:onClick="setVocabulary"
            android:text="@string/proficient"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tip"
        android:visibility="gone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/unknown_full"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:background="@drawable/button"
            android:onClick="start"
            android:text="@string/ok"
            android:textSize="16sp" />
    </LinearLayout>
</FrameLayout>