<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.first.learnenglishwordssmart.activities.MainActivity">

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        style="@style/Base.TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:elevation="4dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="9dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="6dp">

            <ImageView
                android:id="@+id/mainImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/brain" />

            <TextView
                android:id="@+id/level"
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/level"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/toNextLevel"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_next_level"
                android:textColor="@color/black" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:progress="60"
                android:progressDrawable="@drawable/custom_progress_bar" />

            <TextView
                android:id="@+id/vocabulary"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/vocabulary"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/learned"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/learned"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/onLearning"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="6dp"
                android:text="@string/on_learning"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/toGame"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:text="@string/to_game" />

            <Button
                android:id="@+id/learnNew"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:text="@string/learn_new" />

            <Button
                android:id="@+id/smallRepetition"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:text="@string/small_repetition" />

            <Button
                android:id="@+id/bigRepetition"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/big_repetition" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/download_layout"
            android:visibility="gone"
            android:background="@color/colorBackground"
            android:orientation="vertical"
            android:gravity="center" >

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="30dp"
                android:progress="0"
                android:progressDrawable="@drawable/custom_progress_bar" />

            <TextView
                android:id="@+id/downloading"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downloading"
                android:textColor="@color/black" />

        </LinearLayout>
    </FrameLayout>
</LinearLayout>