<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/clickableContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBlack"
        android:clickable="true">

    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/congratulations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/congratulations"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/gainNewLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/gainNewLevel"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/level"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <Button
                android:id="@+id/ok"
                style="@style/ButtonStyle"
                android:layout_width="90dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="18dp"
                android:background="@drawable/button"
                android:text="@string/ok" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>
